--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/awchjimmy/VPLab-Pads#readme",
   "dependencies": {
+    "color-convert": "^1.9.3",
     "express": "^4.16.3",
     "lodash": "^4.17.10",
-    "pug": "^2.0.3"
+    "pug": "^2.0.3",
+    "socket.io": "^2.1.1"
   }
 }
