--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "lodash": "^4.17.10",
     "pug": "^2.0.3",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.5"
   }
 }
